nextjs mathzone configer

--- a/OnlineQuiz.module.css
+++ b/OnlineQuiz.module.css
@@ -38,24 +38,57 @@
   flex-direction: column;
 }
 
-.choiceType {
-  min-width: calc(43% - 32px);
-  min-height: 80px;
+.choiceTypeInner {
   flex-wrap: wrap;
   height: auto;
   width: auto;
+  display: flex;
+  align-items: center;
+  transition: all 0.2s linear;
+  position: relative;
+  padding: 1rem;
   gap: 2rem;
-  padding-right: 1rem;
-  border: 1px solid black;
+  border-radius: 10px;
+  border: 1px solid #A4DCF7;
+  background-color: #FFF;
+  width: 100%;
+  height: 100%;
 }
+
+.choiceType {
+  max-width: calc(50% - 0.5rem);
+  width: calc(50% - 0.5rem);
+  min-height: 45px;
+  flex-wrap: wrap;
+  height: auto;
+  display: flex;
+  align-items: center;
+  background: var(--Greyscale-Surface-White, #FFF);
+  transition: all 0.2s linear;
+  position: relative;
+  z-index: 2;
+  border-radius: 12px;
+
+  /* box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px; */
+  /* border: 1px solid black; */
+}
+
+.choiceType:hover .choiceTypeInner{
+  background: var(--Secondary-Surface-Subtle, #F1F4FD);
+  border-color:#F1F4FD ;
+
+}
+.choiceType:hover {
+  padding-bottom: 10px;
+  background: var(--Secondary-Text-Default, #0C1E64);
+}
+
 
 .choicesType>div:nth-child(2) {
   padding-right: 1rem;
 }
 
-.selectedChoiceType {
-  background-color: #b9c2fc;
-}
+
 
 .bodyPage .wrongAnswer {
   color: red !important;
@@ -367,17 +400,83 @@
     background-color: white;
   } */
 
+.choicebox {
+  display: flex;
+  cursor: pointer;
+  border: none !important;
+  gap: 2rem;
+  padding: 1rem;
+  border-radius: 5px;
+  font-weight: bold;
+  align-items: center;
+  padding: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  border: none;
+}
+
+.selectedChoiceType .circle {
+  border: 1px solid #FFC421;
+}
+
+
+.selectedChoiceType {
+ background: #FFC421;
+ padding-bottom: 10px;
+ pointer-events: none  !important;
+  /* border-color: #3F51B5; */
+}
+.selectedChoiceType .choiceTypeInner{
+border: 1px solid #FFC421;
+background: #FFF9E7;
+}
+
 .green {
-  color: #6caf20;
-  background: #cceea5;
+  padding-bottom: 10px;
+  background: var(--Primary-Border-Default, #38C185);
+  /* border-color: #80da1b; */
 }
 
 .red {
-  color: #eb5953;
-  background: #fae0e0;
+  padding-bottom: 10px;
+  background: #FF0F0F;
+  /* border-color: #ee4741; */
+}
+.red .choiceTypeInner{
+background: #FFEBEB;
+border-color:#FFEBEB ;
+}
+.green .choiceTypeInner{
+  background-color: #C0EDD9;
+  border-color: #C0EDD9;
 }
 
-.red>div:nth-child(1),
+.green .circle {
+  border: 1px solid green;
+}
+
+.green>.circle>b,
+.green>div {
+  color: green;
+}
+
+.red .circle {
+  border: 1px solid #ee4741;
+}
+
+.red>.circle>b,
+.red>.choice_text {
+  color: #ee4741;
+}
+.choice_text{
+  white-space: normal;
+}
+.notHoverClass{
+  pointer-events: none !important;
+  cursor: default !important;
+}
+
+
+/* .red>div:nth-child(1),
 .green>div:nth-child(1) {
   margin: 2rem;
   padding-top: 1rem;
@@ -388,7 +487,7 @@
   line-height: 27px;
   letter-spacing: 0em;
   text-align: left;
-}
+} */
 
 .solutionPage {
   margin-left: 2rem;
@@ -732,7 +831,7 @@
   display: block;
   justify-content: center;
   align-items: center;
-position: relative;
+  position: relative;
   z-index: 1;
 }
 
@@ -861,7 +960,7 @@ position: relative;
   cursor: pointer;
 }
 
-.blockBaseFlexBoxSelection>div {
+/* .blockBaseFlexBoxSelection>div {
   min-width: calc(50% - 0.4rem);
   max-width: calc(50% - 0.4rem);
 
@@ -889,7 +988,7 @@ position: relative;
   height: auto;
 
   padding: 1rem;
-}
+} */
 
 .blockBaseFlexBoxSelection>div>div:nth-child(2) {
   flex: 1;
@@ -986,7 +1085,7 @@ position: relative;
   cursor: pointer;
 }
 
-.MatchObjectVerticalVerticalFlexBox2>div {
+/* .MatchObjectVerticalVerticalFlexBox2>div {
   width: auto;
 
   display: flex;
@@ -1012,14 +1111,14 @@ position: relative;
   height: auto;
 
   padding: 1rem;
-}
+} */
 
-.MatchObjectVerticalVerticalFlexBox2>div>div {
+/* .MatchObjectVerticalVerticalFlexBox2>div>div {
   min-width: 40px;
   min-height: 40px;
   width: 40px;
   aspect-ratio: 1/1;
-}
+} */
 
 .MatchObjectVerticalVerticalFlexBox2>div>div:nth-child(2) {
   flex: 1;
@@ -1123,7 +1222,7 @@ position: relative;
   cursor: pointer;
 }
 
-.CountOnTensframeSelectFlexBox>div {
+/* .CountOnTensframeSelectFlexBox>div {
   min-width: calc(50% - 0.5rem);
   max-width: calc(50% - 0.5rem);
 
@@ -1150,7 +1249,7 @@ position: relative;
 
   height: auto;
   min-height: 60px;
-}
+} */
 
 .TensframeButtonBox {
   width: 80px;
@@ -2070,33 +2169,6 @@ position: relative;
   cursor: pointer;
 }
 
-.PlaceValueTableSelectTypeSelectChoiceFlexBox2>div {
-  min-width: calc(50% - 0.5rem);
-  max-width: calc(50% - 0.5rem);
-
-  flex: 1;
-  display: flex;
-
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 24px;
-  letter-spacing: 0em;
-  text-align: left;
-  align-items: center;
-  padding-left: 18px;
-  color: #233584;
-  border-radius: 12px;
-  word-break: break;
-  min-height: auto;
-  height: 60px;
-
-  gap: 2rem;
-
-  border: 1px solid black;
-
-  height: auto;
-}
 
 .PlaceValueTableSelectTypeSelectChoiceFlexBox2>div>div:nth-child(2) {
   flex: 1;
@@ -2597,7 +2669,7 @@ position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   min-height: 60px;
   height: auto;
   word-break: break-word;
@@ -2647,7 +2719,7 @@ position: relative;
 
   gap: 2rem;
 
-  border: 1px solid black;
+  /* border: 1px solid black; */
 
   height: auto;
 }
@@ -2715,8 +2787,6 @@ position: relative;
 
   gap: 2rem;
 
-  border: 1px solid black;
-
   height: auto;
 }
 
@@ -2755,19 +2825,18 @@ position: relative;
   justify-content: center;
 }
 
-.bodyPage div,
+/* .bodyPage div,
 .bodyPage span,
 .bodyPage tr,
 .bodyPage td,
 .bodyPage th,
 .bodyPage p {
-  /* H3 Desktop 18 pt */
 
   font-family: "GothamRnd-Book2";
   font-style: normal !important;
   font-weight: 700 !important;
   font-size: 18px;
-}
+} */
 
 .bodyPage span {
   line-height: 100% !important;
@@ -3232,14 +3301,6 @@ position: relative;
   color: #444444;
 }
 
-.correctAnswer>h6 {
-  margin: 0;
-  margin-bottom: 10px;
-  font-weight: 500;
-  font-size: 18px;
-  margin: 0;
-  padding: 0;
-}
 
 .correctAnswer {
   display: flex;
@@ -3249,9 +3310,6 @@ position: relative;
   column-gap: 10px;
 }
 
-.correctAnswer2>h6 {
-  font-weight: bold;
-}
 
 
 .tdspace td:nth-last-child(1) {
