--- a/choices.module.css
+++ b/choices.module.css
@@ -3,6 +3,7 @@
   display: grid;
   grid-template-columns: repeat(2,1fr);
   gap: 10px;
+  transition: all 0.5s linear;
 }
 .choiceTypeInner {
   flex-wrap: wrap;
@@ -76,7 +77,6 @@
 .selectedChoiceType {
  background: #FFC421;
  padding-bottom: 10px;
- pointer-events: none  !important;
   /* border-color: #3F51B5; */
 }
 .selectedChoiceType .choiceTypeInner{
