--- a/OnlineQuiz.module.css
+++ b/OnlineQuiz.module.css
@@ -377,7 +377,7 @@
 
   height: 35px;
 
-  font-family: Montserrat;
+  font-family: var(--fn);
   font-size: 12px;
   font-style: normal;
   font-weight: 700;
@@ -480,7 +480,7 @@ border-color:#FFEBEB ;
 .green>div:nth-child(1) {
   margin: 2rem;
   padding-top: 1rem;
-  font-family: Montserrat;
+  font-family: var(--fn);
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -520,7 +520,7 @@ border-color:#FFEBEB ;
 .modalsParent {
   position: relative;
   border-radius: 11px;
-  font-family: Montserrat;
+  font-family: var(--fn);
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -684,7 +684,7 @@ border-color:#FFEBEB ;
 .modalsParent2 {
   position: relative;
   border-radius: 11px;
-  font-family: Montserrat;
+  font-family: var(--fn);
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -707,7 +707,7 @@ border-color:#FFEBEB ;
   float: right;
   border: 1px solid #d3d8e3;
   cursor: pointer;
-  font-family: Montserrat;
+  font-family: var(--fn);
   font-size: 12px;
   font-style: normal;
   font-weight: 700;
@@ -2656,7 +2656,6 @@ border-color:#FFEBEB ;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 20px;
 }
 
 /* NumberBond Select Choice */
@@ -3376,7 +3375,7 @@ input::-webkit-inner-spin-button {
 
 .arrowBotline {
   border-bottom: 2px solid #888888;
-  top: -19px;
+  top: -27px;
   left: 15px;
   width: 25px;
   position: relative;
