--- a/OnlineQuiz.module.css
+++ b/OnlineQuiz.module.css
@@ -2453,6 +2453,22 @@ border-color:#FFEBEB ;
   height: auto;
   text-align: center;
 }
+.CountGridTenframesMultipleContentGrid {
+  grid-auto-rows: 60px;
+}
+.CountGridTenframesMultipleContentGrid img {
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+  display: block;
+}
+.CountGridTenframesMultipleContentGrid > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .CountGridTenframesMultipleContentGrid>div {
   border: 1px solid black;
