--- a/OnlineQuiz.module.css
+++ b/OnlineQuiz.module.css
@@ -13,6 +13,15 @@
   font-style: normal;
   font-display: swap;
 }
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
 
 .flex {
   display: flex;
@@ -312,11 +321,10 @@
 }
 
 .checkButtonColor {
-  background-color: blue;
+  background-color: #ff8652;
   color: white;
   width: 100px;
   height: 40px;
-  border-radius: 20px;
   cursor: pointer;
 }
 
