--- a/NumberBond/NumberBond.module.css
+++ b/NumberBond/NumberBond.module.css
@@ -37,7 +37,7 @@
   align-items: center;
 }
 .root1 {
-  width: 100%;
+  width: fit-content;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -82,12 +82,9 @@
 }
 
 .tree {
-  width: 95%;
-  margin: auto;
   position: relative;
   margin-top: 1rem;
-  max-width: 95%;
-  width: fit-content;
+  width: 100%;
 }
 .bond {
   position: absolute;
@@ -137,7 +134,7 @@
   gap: 1rem;
   width: fit-content;
 
-  margin: auto;
+  /* margin: auto; */
 }
 .tableFlex input {
   width: 40px;
