css issue fixed in onlinequiz.module.css

--- a/OnlineQuiz.module.css
+++ b/OnlineQuiz.module.css
@@ -13,15 +13,11 @@
   font-style: normal;
   font-display: swap;
 }
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
 
-input[type="number"] {
+
+/* input[type="number"] {
   -moz-appearance: textfield;
-}
+} */
 
 .flex {
   display: flex;
