horizontal fill up css issie fixed

--- a/mathzone.css
+++ b/mathzone.css
@@ -1346,7 +1346,7 @@ td.ldivision_left {
 }
 
 #studentAnswerResponse div {
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 #studentAnswerResponse .mathzoneMultipleChoiceFlexBox {
